Add location to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,10 @@
       </ul>
     </div>
 
+    <div class="footer-col">
+      <p>Lord Hope Building<br/>St James Road<br/>Glasgow, UK</p>
+    </div>
+
   </div>
 
 </footer>
